[package]
name = "rust-blinky"
version = "0.0.1"
authors = ["roel0"]
description = "a simple blink app"
keywords = ["arm", "cortex-m", "stm32", "blink"]
categories = ["embedded", "no-std"]

[profile.release]
lto = true
codegen-units = 1
debug = false

[dependencies.cortex-m]
version = "0.5.6"

[dependencies.cortex-m-rt]
version = "0.5.3"

[dependencies.cortex-m-semihosting]
version = "0.3.1"

[dependencies.panic-semihosting]
version = "0.3.0"

[dependencies.stm32l0]
version = "0.2.3"
features = ["stm32l0x3", "rt"]
